src/objects/ADvendio__Campaign_Item__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Bandwidth__c</fullName>
        <description>The bandwidth groups being targeted by the Campaign Item.</description>
        <inlineHelpText>The bandwidth groups being targeted by the Campaign Item.</inlineHelpText>
        <label>Bandwidth</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wi-Fi (mobile apps only)</fullName>
                </value>
                <value>
                    <fullName>Commercial broadband</fullName>
                </value>
                <value>
                    <fullName>DSL</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Dialup</fullName>
                </value>
                <value>
                    <fullName>Carrier (mobile apps only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__BillMe__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bill me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingStatus__c</fullName>
        <label>Billing Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Billing_category__c</fullName>
        <description>Enter the billing category for this campaign item.</description>
        <inlineHelpText>Enter the billing category for this campaign item.</inlineHelpText>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                    <default>true</default>
                    <label>CPM</label>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CPMo</fullName>
                </value>
                <value>
                    <fullName>CPY</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__BleedAmount__c</fullName>
        <description>Please enter the amount of bleed in points, mm, or inches. (This information can be transferred to your flat planning tool.)</description>
        <inlineHelpText>Please enter the amount of bleed in points, mm, or inches. (This information can be transferred to your flat planning tool.)</inlineHelpText>
        <label>Bleed Amount</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__BookingCalendarDateAssignment__c</fullName>
        <description>When a Campaign item is marked as exclusive it will be shown in the Booking Calendar. Normally a Campaign Item runs from 00:00 to 23:59, if not please decide how the booking calendar should handle this Campaign Item.</description>
        <inlineHelpText>Please choose the behavior for this Item in Booking Calendar.</inlineHelpText>
        <label>Booking Calendar Date Assignment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>do not show first day</fullName>
                </value>
                <value>
                    <fullName>do not show last day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__BookingQuantity__c</fullName>
        <description>The real quantity being booked by Ad-Server.</description>
        <formula>ROUND(IF(NOT(ISNULL(ADvendio__Total_Impressions__c)), ADvendio__Total_Impressions__c, 
IF( AND(OR(ISPICKVAL( ADvendio__Billing_category__c, &quot;CPD&quot;), ISPICKVAL( ADvendio__Billing_category__c, &quot;Fixed Price&quot;), ISPICKVAL( ADvendio__Billing_category__c, &quot;CPW&quot;), ISPICKVAL( ADvendio__Billing_category__c, &quot;CPMo&quot;), ISPICKVAL( ADvendio__Billing_category__c, &quot;CPY&quot;), ISPICKVAL( ADvendio__Billing_category__c, &quot;CPSec&quot;)), NOT(ISNULL( ADvendio__Guaranteed_AI__c ))), ADvendio__Guaranteed_AI__c, 
IF( AND( NOT(ISNULL(ADvendio__Ad_Price__r.ADvendio__Ad_Spec__r.ADvendio__OverbookingFactor__c)), OR( ISPICKVAL( ADvendio__Billing_category__c , &apos;CPC&apos; ), ISPICKVAL( ADvendio__Billing_category__c, &apos;CPM&apos; ))), ADvendio__Quantity__c * (1 + ADvendio__Ad_Price__r.ADvendio__Ad_Spec__r.ADvendio__OverbookingFactor__c), ADvendio__Quantity__c))),0)</formula>
        <inlineHelpText>The real quantity being booked by Ad-Server.</inlineHelpText>
        <label>Booking Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__BudgetN2__c</fullName>
        <description>Please enter the budget of the agency/customer to automatically calculate a special discount. Make sure to either to use target N2 or this field. (Used for the CPM calculator)</description>
        <inlineHelpText>Please enter the budget of the agency/customer to automatically calculate a special discount. Make sure to either to use target N2 or this field. (Used for the CPM calculator)</inlineHelpText>
        <label>Budget N2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Calendar_Week_due_to__c</fullName>
        <description>This field will automatically calculate the calendar week in which the display of this campaign item will end.</description>
        <inlineHelpText>This field will automatically calculate the calendar week in which the display of this campaign item will end.</inlineHelpText>
        <label>Calendar Week (due to)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Calendar_Week_from__c</fullName>
        <description>This field will automatically calculate the calendar week in which the display of this campaign item will begin.</description>
        <inlineHelpText>This field will automatically calculate the calendar week in which the display of this campaign item will begin.</inlineHelpText>
        <label>Calendar Week (from)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__CiAPCountDefault__c</fullName>
        <description>Summarizes assigned CampaignItem-Principal-Assignment records using a &quot;collective Principal&quot;</description>
        <inlineHelpText>Summarizes assigned CampaignItem-Principal-Assignment records using a &quot;collective Principal&quot;</inlineHelpText>
        <label>Count Default CiAP</label>
        <summaryFilterItems>
            <field>ADvendio__CampaignItemAccountPayableAssignment__c.ADvendio__IsCollective__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__CampaignItemAccountPayableAssignment__c.ADvendio__CampaignItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__ClickRate__c</fullName>
        <description>This field is only used from the NetCalculator, it does not represent the click rate from a delivering Campaign Item.</description>
        <label>Click Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__CommitmentRelevant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Please check if this item counts towards the Commitment KPIs.</description>
        <inlineHelpText>Please check if this item counts towards the Commitment KPIs.</inlineHelpText>
        <label>Commitment Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ComponentOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To mark a component as deletable. Works only with distribution individual.</description>
        <inlineHelpText>If checked the package component can be deleted in the Media Configuration.</inlineHelpText>
        <label>Component Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ConditionApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check if the linked Commitment Condition(s) are to be applied.</description>
        <inlineHelpText>Please check if the linked Commitment Condition(s) are to be applied.</inlineHelpText>
        <label>Condition Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ConnectedItemID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>If you cancel a lineitem there will be two CampaignItems, the original one and the one to cancel the original. In this field the Id of each other is saved.</description>
        <externalId>true</externalId>
        <label>Connected Item ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__ConnectedItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If you cancel a CampaignItem, a second CampaignItem is created to cancel the original. This field links those matching CampaignItems.</description>
        <label>Connected Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Campaign Items (Connected Item)</relationshipLabel>
        <relationshipName>ConnectedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__CreativeRotationType__c</fullName>
        <description>Choose your rotation type:
Evenly: rotates evenly
Optimized: highest click-through rate will be shown most
Weighted: rotates at specified frequency
Sequential: rotates in specified order</description>
        <inlineHelpText>Choose your rotation type:
Evenly: rotates evenly
Optimized: highest click-through rate will be shown most
Weighted: rotates at specified frequency
Sequential: rotates in specified order</inlineHelpText>
        <label>Creative Rotation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evenly</fullName>
                </value>
                <value>
                    <fullName>Optimized</fullName>
                </value>
                <value>
                    <fullName>Weighted</fullName>
                </value>
                <value>
                    <fullName>Sequential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__CreativeUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>You can either check this checkbox manual if you have uploaded a creative or you can check this checkbox with a workflow after clicking the button &quot;Creative Upload&quot;.</description>
        <inlineHelpText>You can either check this checkbox manual if you have uploaded a creative or you can check this checkbox with a workflow after clicking the button &quot;Creative Upload&quot;.</inlineHelpText>
        <label>Creative Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__CurrentAdServerStatus__c</fullName>
        <label>Current AdServer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Days__c</fullName>
        <description>This field will automatically calculate the amount of days on which this campaign item will be displayed.</description>
        <formula>ADvendio__until_Date__c  -  ADvendio__from_Date__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will automatically calculate the amount of days on which this campaign item will be displayed.</inlineHelpText>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredAIsManual__c</fullName>
        <label>Delivered AIs (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredClicksManual__c</fullName>
        <label>Delivered Clicks (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Delivered_Clicks__c</fullName>
        <description>The ad server interface will enter the delivered clicks here.</description>
        <inlineHelpText>The ad server interface will enter the delivered clicks here.</inlineHelpText>
        <label>Delivered Clicks</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Delivered_Impressions__c</fullName>
        <description>The ad server interface will enter the delivered impressions here.</description>
        <inlineHelpText>The ad server interface will enter the delivered impressions here. (technical View)</inlineHelpText>
        <label>Delivered Impressions</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveryRateType__c</fullName>
        <label>Delivery Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evenly</fullName>
                </value>
                <value>
                    <fullName>Frontloaded</fullName>
                </value>
                <value>
                    <fullName>As fast as possible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DeviceCapability__c</fullName>
        <description>Represents device capabilities that are being targeted by the Campaign Item.</description>
        <inlineHelpText>Represents device capabilities that are being targeted by the Campaign Item.</inlineHelpText>
        <label>Device Capability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Apps</fullName>
                </value>
                <value>
                    <fullName>Phone calls</fullName>
                </value>
                <value>
                    <fullName>MRAID v1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DeviceCategory__c</fullName>
        <description>The device categories being targeted by the Campaign Item.</description>
        <inlineHelpText>The device categories being targeted by the Campaign Item.</inlineHelpText>
        <label>Device Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile Midrange</fullName>
                </value>
                <value>
                    <fullName>Mobile Highend</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionPeriod__c</fullName>
        <description>Defines if values are split with daily or monthly precision.
This refers for automated splits</description>
        <inlineHelpText>Defines if values are split with daily or monthly precision.
This refers for automated splits</inlineHelpText>
        <label>Distribution (Period)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>day-based</fullName>
                    <default>true</default>
                    <label>day-based</label>
                </value>
                <value>
                    <fullName>month-based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionUnit__c</fullName>
        <description>Defines which value (amount or quantity) is split in automated splits.</description>
        <inlineHelpText>Defines which value (amount or quantity) is split in automated splits.</inlineHelpText>
        <label>Distribution (Unit)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DoNotShowOnProposalPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Show on Proposal PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__EffectiveAgencyCommission__c</fullName>
        <description>Uses Agency Commission if AC is checked, otherwise &quot;0&quot;.</description>
        <formula>IF(ADvendio__AC__c, (VALUE(TEXT(ADvendio__Agency_Commission__c))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uses Agency Commission if AC is checked, otherwise &quot;0&quot;.</inlineHelpText>
        <label>Effective Agency Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeBandwidths__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all bandwith targeting is excluded.</description>
        <inlineHelpText>If checked, all bandwith targeting is excluded.</inlineHelpText>
        <label>Exclude Bandwidths</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeBrowsers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all browser targeting is excluded.</description>
        <inlineHelpText>If checked, all browser targeting is excluded.</inlineHelpText>
        <label>Exclude Browsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeCities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all city targeting is excluded.</description>
        <inlineHelpText>If checked, all city targeting is excluded.</inlineHelpText>
        <label>Exclude Cities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeCountries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all country targeting is excluded.</description>
        <inlineHelpText>If checked, all country targeting is excluded.</inlineHelpText>
        <label>Exclude Countries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeDeviceCapabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all device capability targeting is excluded.</description>
        <inlineHelpText>If checked, all device capability targeting is excluded.</inlineHelpText>
        <label>Exclude Device Capabilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeDeviceCategories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all device category targeting is excluded.</description>
        <inlineHelpText>If checked, all device category targeting is excluded.</inlineHelpText>
        <label>Exclude Device Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeOperatingSystems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all operating system targeting is excluded.</description>
        <inlineHelpText>If checked, all operating system targeting is excluded.</inlineHelpText>
        <label>Exclude Operating Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExcludeRegions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all region targeting is excluded.</description>
        <inlineHelpText>If checked, all region targeting is excluded.</inlineHelpText>
        <label>Exclude Regions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExclusivityCheckStatus__c</fullName>
        <description>Shows the status of the last exclusivity check on this line item. Possible options are: OK - no contending Line Item exists / or the number of existing contending line Items.</description>
        <inlineHelpText>Shows the status of the last exclusivity check on this line item. Possible options are: OK - no contending Line Item exists / or the number of existing contending line Items.</inlineHelpText>
        <label>Exclusivity Check Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalID__c</fullName>
        <description>External Id used to connect data from audience analytics (AdGap / Comscore, etc.).</description>
        <inlineHelpText>External Id used to connect data from audience analytics (AdGap / Comscore, etc.).</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FC_Ad_served_every__c</fullName>
        <description>Enter the amount of units for the FC. For one day, enter 1.</description>
        <inlineHelpText>Enter the amount of units for the FC. For one day, enter 1.</inlineHelpText>
        <label>FC Ad served every</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FC_Period__c</fullName>
        <description>Choose the unit for the FC.</description>
        <inlineHelpText>Choose the unit for the FC.</inlineHelpText>
        <label>FC Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>minute</fullName>
                </value>
                <value>
                    <fullName>session</fullName>
                </value>
                <value>
                    <fullName>hour</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>week</fullName>
                </value>
                <value>
                    <fullName>month</fullName>
                </value>
                <value>
                    <fullName>campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__FC_Quantity__c</fullName>
        <description>Enter the number of impressions for a certain period of time for this campaign item.</description>
        <inlineHelpText>Enter the number of impressions for a certain period of time for this campaign item.</inlineHelpText>
        <label>FC Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FlatPlanStatus__c</fullName>
        <description>Shows the status of the ad as reported by the connected flat planning tool.</description>
        <inlineHelpText>Shows the status of the ad as reported by the connected flat planning tool.</inlineHelpText>
        <label>Flat Plan Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Frequency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FromHour__c</fullName>
        <description>Enter the campaign item&apos;s start hour of period.</description>
        <inlineHelpText>Enter the campaign item&apos;s start hour of period.</inlineHelpText>
        <label>From (Hour)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__FromMinute__c</fullName>
        <description>Enter the campaign item&apos;s start minute of period.</description>
        <inlineHelpText>Enter the campaign item&apos;s start minute of period.</inlineHelpText>
        <label>From (Minute)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__GoalPercent__c</fullName>
        <description>This value will be pushed to DFP as the percentage of the of total impressions in your network which is used for sponsorship AdTypes. If left empty ADvendio will push 100% as default.</description>
        <inlineHelpText>Enter the percentage of total impressions in your network which you like to use for the sponsorship AdTypes. If the field is left empty ADvendio will push 100% if AdType is of type Sponsorship.</inlineHelpText>
        <label>Goal Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Guaranteed_AI__c</fullName>
        <description>Enter the guaranteed AI for non-CPM positions .</description>
        <inlineHelpText>Enter the guaranteed AI for non-CPM positions .</inlineHelpText>
        <label>Guaranteed AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Height__c</fullName>
        <description>What will be the Height for this AD in Pixel/mm - this could be used for Price Calculation at Media Configuration.</description>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideContentTargetingOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Content Targeting On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideFCOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide FC On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideGeoTargetingOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Geo Targeting On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideKeyValueTargetingOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Key Value Targeting On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HidePublicationDateTargetingOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Publication Date Targeting On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideTechnicalTargetingOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Technical Targeting On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideTimeTargetingOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Time Targeting On Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Internal_comment__c</fullName>
        <description>You have the option to enter a comment for this campaign item – for internal use only.</description>
        <inlineHelpText>You have the option to enter a comment for this campaign item – for internal use only.</inlineHelpText>
        <label>Internal comment</label>
        <type>TextArea</type>
    </fields>
</CustomObject>